removed break word from nesting and fixed overflow issue with cards, cleaned up code

--- a/ui/src/js/components/shared/fileBrowser/LinkCard.scss
+++ b/ui/src/js/components/shared/fileBrowser/LinkCard.scss
@@ -13,7 +13,6 @@
     p {
       align-self: flex-start;
       max-width: 375px;
-      word-break: break-word;
       padding: 10px;
     }
     ul {
