--- a/ui/src/js/components/shared/fileBrowser/LinkModal.scss
+++ b/ui/src/js/components/shared/fileBrowser/LinkModal.scss
@@ -36,7 +36,7 @@
 
 .LinkModal__dataset-container{
   margin-top: 100px;
-  height: calc(100% - 70px);
+  height: calc(100% - 101px);
   overflow: auto;
   width: 100%;
 }
